syntax = "proto3";
package api.v1;

import "google/type/date.proto";

option go_package = "github.com/mholtzscher/formula-data/gen/api/v1;apiv1";

message Season {
  int32 season_id = 1;
  int32 year = 2;
  string series = 3;
}

message Driver {
  int32 driver_id = 1;
  string first_name = 2;
  string last_name = 3;
  string place_of_birth = 4;
  google.type.Date date_of_birth = 5;
}

message Team {
  int32 team_id = 1;
  string name = 2;
  string base = 3;
}
